--- a/contributions/index.html
+++ b/contributions/index.html
@@ -31,8 +31,22 @@
 
 <h1 class="header">Contributions: My Production, Productions with Me, Awards & Positions</h1>
 
+<div class="quicklinks">
+    <ul>
+        <li><a href="#blogs">Blogs</a></li>
+        <li><a href="#books">Books</a></li>
+        <li><a href="#collections">Collections</a></li>
+        <li><a href="#podcasts">Podcasts</a></li>
+        <li><a href="#my_articles">Articles</a></li>
+        <li><a href="#their_articles">Articles on me</a></li>
+        <li><a href="#awards">Awards</a></li>
+        <li><a href="#conferences">Conference Committees</a></li>
+        <li><a href="#positions">Positions</a></li>
+    </ul>
+</div>
+
 <section class="dark">
-<h2>Blogs</h2>
+<h2 id="blogs">Blogs</h2>
 <ul>
        <li><a href="http://visible-quality.blogspot.fi">A Seasoned Testers Crystal Ball</a></li>
           <li><a href="https://medium.com/@maaretp">Maaret on Medium</a></li>
@@ -41,7 +55,7 @@
 </section>
 
 <section class="light">
-    <h2>Books</h2>
+    <h2 id="books">Books</h2>
     <div class="indent">
     <div class="books2">
         <a href="http://exploratorytesting.xyz"><img class="books" src="../images/Book-ET.png" alt="Exploratory Testing book"></a>
@@ -52,7 +66,7 @@
 </section>
 
 <section class="dark">
-    <h2>Collections</h2>
+    <h2 id="collections">Collections</h2>
     <ul>
         <li><a href="https://maaretp.com/ETI.html"">Exploratory Testing Index</a></li>
         <li><a href="">Exploratory Testing Foundations</a> -course, Creative Commons Attribution at <a href="http://exploratorytestingacademy.com/">Exploratory Testing Academy</a></li>
@@ -61,7 +75,7 @@
 </section>
 
 <section class="light">
-    <h2>Podcast Appearances</h2>
+    <h2 id="podcasts">Podcast Appearances</h2>
     <ul>
         <li>Semaphore podcast, <a href="https://semaphoreci.com/blog/maaret-pyhajarvi">Maaret Pyhäjärvi on Testing in the Modern Age</a>, March 12th, 2024</li>
         <li>Digital Crime Podcast, 2024</li>
@@ -105,7 +119,7 @@
 </section>
 
 <section class="dark">
-    <h2>Articles I Wrote</h2>
+    <h2 id="my_articles">Articles I Wrote</h2>
     <ul>
         <li>Change in the world of testing - New Misconceptions from Old Folklore in <a href="https://www.browserstack.com/blog/change-in-the-world-of-testing/">Browserstack blog</a>, Feb 11th, 2022.
         <li>Experiencing 5x Transformation in <a href="https://www.agile-thoughts.com/magazine/jun-2021/">Agile Thoughts Magazine</a> June 2021
@@ -157,7 +171,7 @@
 </section>
 
 <section class="light">
-    <h2>Others Write about Me</h2>
+    <h2 id="their_articles">Others Write about Me</h2>
     <ul>
         <li><a href="https://fi.wikipedia.org/wiki/Maaret_Pyhäjärvi">Maaret Pyhäjärvi on Wikipedia</a></li>
         <li><a href="https://www.tivi.fi/uutiset/it-alalla-puhujakeikat-kiihdyttavat-uraa-tuovat-paljon-uutta-konsultointityota/ec1af474-c421-47c2-ad2b-d11d13c77360">IT-alalla puhujakeikat kiihdyttävät uraa ja tuovat paljon uutta konsultointityötä</a>, Tivi, 16.3.2024</li>
@@ -182,7 +196,7 @@
 </section>
 
 <section class="dark">
-    <h2>Awards and Nominations</h2>
+    <h2 id="awards">Awards and Nominations</h2>
     <ul>
         <li>TIVIA70 Award 2023 'Kiitoksena työstä Suomen ICT-yhteisöjen rakentajana, kouluttajana ja avoimuuden edistäjänä'</li>
         <li>ICT 100 Most Influential 2019, 2020, 2021, 2022, 2023 by Tivi</li>
@@ -195,7 +209,7 @@
 </section>
 
 <section class="light">
-    <h2>Conference Program Committees</h2>
+    <h2 id="conferences">Conference Program Committees</h2>
     <ul>
         <li>2021-2024 Program Committee Member, SEETEST Conference</li>
         <li>2023 Program Committee Member, Selenium Conference (Chicago)</li>
@@ -209,7 +223,7 @@
 </section>
 
 <section class="dark">
-    <h2> Positions of Responsibility</h2>
+    <h2 id="positions"> Positions of Responsibility</h2>
     <ul>
         <li>2022->    Selenium Project Leadership Committee</li>
         <li>2024->    Sytyke ry, member of the board</li>
