--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -67,6 +67,16 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">A Process / Compliancy Story, Case of Last Two Years</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Customer Event, May 30th 2024, Helsinki, Finland</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_process_compliance_story_case.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#Requirements, #Releases, #Process, #Compliance</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <!--<div class="status">NEW</div>-->
             <div class="talktitle">Make Your Impact with Testing</div>
             <div class="talktype">KEYNOTE</div>
