--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        With enough flexibility on quality, I can deliver any requirement on any budget.
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Making releases routine is the heartbeat of a good team, creating a bubble of productive serenity.
       </h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
