--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -56,6 +56,15 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">TBA</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">TBA, October 22nd & 23rd 2024, Online</div>
+            <div class="talktheme">#ShiftLeft, #Improvement, #Future, #WebAutomation</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Social Software Testing Approaches</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testing United, November 5th & 6th 2020, Online</div>
