--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Nothing changes if you change nothing.
+      </h1>
+      <h4>&mdash;Helena Jeret-Mäe</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         With enough flexibility on quality, I can deliver any requirement on any budget.
       </h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
