--- a/quote.html
+++ b/quote.html
@@ -9,7 +9,7 @@
       <h1>
         Nothing changes if you change nothing.
       </h1>
-      <h4>&mdash;Helena Jeret-Mäe</h4>
+      <h4>&mdash;Helena Jeret-M&auml;e</h4>
     </div>
   </div>
 
