--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Pay attention to what part of the work gets you the praise and accolades. Avoid temptation to do only that.
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Nothing changes if you change nothing.
       </h1>
       <h4>&mdash;Helena Jeret-M&auml;e</h4>
