--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,24 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        When you don't know what you don't know, how are you going to ask a question about it?
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        You don't have to die to be forgotten.
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Pay attention to what part of the work gets you the praise and accolades. Avoid temptation to do only that.
       </h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
