Update slide location

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -80,9 +80,9 @@
             <div class="status">NEW</div>
             <div class="talktitle">Make Releases Routine</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Helsinki Testing Meetup, May 23rd 2024, Helsinki, Finland</div>
-            <a href="https://github.com/maaretp/talks/blob/main/talk_process_compliance_story_case.md"><i class="fas fa-bars"></i></a>
-            <a href="https://github.com/maaretp/legacy/blob/main/MakingReleasesRoutine.pdf"><i class="fab fa-slideshare"></i></a>
+            <div class="wherewhenwhere">Finnish Testing Meetup, May 23rd 2024, Helsinki, Finland</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_making_releases_routine.md"><i class="fas fa-bars"></i></a>
+            <a href="https://github.com/maaretp/legacy/blob/main/talks_to_articles/making_releases_routine/MakingReleasesRoutine.pdf"><i class="fab fa-slideshare"></i></a>
             <div class="talktheme">#Releases, #Failure, #ResultsGap</div>
         </div>
 
