--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li><span>May 23rd 2024</span>Making Releases Routine at Helsinki Software Testing Meetup, Helsinki, Finland</li>
+            <li><span>May 23rd 2024</span>Making Releases Routine at Finnish Testing Meetup, Helsinki, Finland</li>
             <li><span>May 30th 2024</span>Process / Compliancy Story, Case of an Organization at Customer Event, Helsinki, Finland.</li>
             <li><span>June 4th 2024</span> Social Software Testing Approaches at <a href="https://www.meetup.com/zalando-tech-event-helsinki/events/300897602/">Quality Engineering Meetup at Zalando</a>, Helsinki, Finland.</li>
             <li><i>Available to speak on request by choice of employer, CGI (June 3rd 2024 ->).</i></li>
