--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -920,6 +920,7 @@
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, September 2004, Helsinki, Finland</div>
         <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, January 2005, Helsinki, Finland</div>
+        <a href="https://github.com/maaretp/legacy/blob/main/talks/2004/FI/automatisoituuko-testaus-tulevaisuudessa.pdf"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
