Add slides to automation talk from 2005

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -921,6 +921,7 @@
         <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, September 2004, Helsinki, Finland</div>
         <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, January 2005, Helsinki, Finland</div>
         <a href="https://github.com/maaretp/legacy/blob/main/talks/2004/FI/automatisoituuko-testaus-tulevaisuudessa.pdf"><i class="fab fa-slideshare"></i></a>
+        <a href="https://github.com/maaretp/legacy/blob/main/talks/2005/FI/automatisoituuko-testaus-tulevaisuudessa.pdf"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
