--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -918,7 +918,8 @@
         <div class="timecircle">45 min</div>
         <div class="talktitle">Automatisoituuko testaus tulevaisuudessa? (Will Testing Be Automated in the Future?)</div>
         <div class="talktype">TALK</div>
-        <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, September 2004, Helsinki, Finland</div>
+        <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, September 15th 2004, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Customer event, September 22nd 2004, Helsinki, Finland</div>
         <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, January 2005, Helsinki, Finland</div>
         <a href="https://github.com/maaretp/legacy/blob/main/talks/2004/FI/automatisoituuko-testaus-tulevaisuudessa.pdf"><i class="fab fa-slideshare"></i></a>
         <a href="https://github.com/maaretp/legacy/blob/main/talks/2005/FI/automatisoituuko-testaus-tulevaisuudessa.pdf"><i class="fab fa-slideshare"></i></a>
