Add SeleniumConf talk

--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Exploratory testing is when you're testing and also thinking about what you're doing, and whether it matters.
+      </h1>
+      <h4>&mdash;Elizabeth Zagroba</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         When you don't know what you don't know, how are you going to ask a question about it?
       </h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
