--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li><span>May 23rd 2024</span>Making Releases Routine at Finnish Testing Meetup, Helsinki, Finland</li>
             <li><span>May 30th 2024</span>Process / Compliancy Story, Case of an Organization at Customer Event, Helsinki, Finland.</li>
             <li><span>June 4th 2024</span> Social Software Testing Approaches at <a href="https://www.meetup.com/zalando-tech-event-helsinki/events/300897602/">Quality Engineering Meetup at Zalando</a>, Helsinki, Finland.</li>
+            <li><span>June 21st 2024</span>State of Union - with Diego Molina, Puja Jagani and Maaret Pyhäjärvi at <a href="https://2024.seleniumconf.in">Selenium Conference 2024 (In / Online)</a></li>
             <li><i>Available to speak on request by choice of employer, CGI (June 3rd 2024 ->).</i></li>
         </ul>
     </div>
