--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img src="./images/maaret.jpg" alt="Maaret Pyhäjärvi">
         <div class="about-text">
             <h2>About Me</h2>
-            <h5>Development Manager at Vaisala (-> 31.5). <br>Testing Specialist. Polyglot Programmer.<br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
+            <h5>Director, Consulting at CGI. <br>Testing Specialist. Polyglot Programmer.<br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
             <div class="speaking">
                 <h6>Delivered 529 sessions at events in 28 countries</h6>
                     <img src="images/flags/4x3/fi.svg" alt="Finland">
@@ -128,7 +128,6 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li><span>May 30th 2024</span>Process / Compliancy Story, Case of an Organization at Customer Event, Helsinki, Finland.</li>
             <li><span>June 4th 2024</span> Social Software Testing Approaches at <a href="https://www.meetup.com/zalando-tech-event-helsinki/events/300897602/">Quality Engineering Meetup at Zalando</a>, Helsinki, Finland.</li>
             <li><span>June 21st 2024</span>State of Union - with Diego Molina, Puja Jagani and Maaret Pyhäjärvi at <a href="https://2024.seleniumconf.in">Selenium Conference 2024 (In / Online)</a></li>
             <li><i>Available to speak on request by choice of employer, CGI (June 3rd 2024 ->).</i></li>
