No more side, all part of work

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img src="./images/maaret.jpg" alt="Maaret Pyhäjärvi">
         <div class="about-text">
             <h2>About Me</h2>
-            <h5>Director, Consulting at CGI. <br>Testing Specialist. Polyglot Programmer.<br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
+            <h5>Director, Consulting at CGI. <br>Testing Specialist. Polyglot Programmer.<br>Teaching/Consulting/Doing. <br>Serial volunteer. </h5>
             <div class="speaking">
                 <h6>Delivered 529 sessions at events in 28 countries</h6>
                     <img src="images/flags/4x3/fi.svg" alt="Finland">
