Add talk description

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -61,6 +61,7 @@
             <div class="wherewhenwhere">Testing United, November 5th & 6th 2020, Online</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Quality Engineering Meetup at Zalando, June 4th 2024, Helsinki, Finland</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_social_software_testing_approaches.md"><i class="fas fa-bars"></i></a>
             <a href="https://www.slideshare.net/maaretp/testing-united-social-software-testing-approaches"><i class="fab fa-slideshare"></i></a>
             <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
         </div>
