Remove new label

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -78,7 +78,7 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
+            <!--<div class="status">NEW</div>-->
             <div class="talktitle">Make Releases Routine</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Finnish Testing Meetup, May 23rd 2024, Helsinki, Finland</div>
