--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Developers on average spend as much as 58% of their time comprehending existing source code.      
+      </h1>
+      <h4>&mdash;Felienne Hermans</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Exploratory testing is when you're testing and also thinking about what you're doing, and whether it matters.
       </h1>
       <h4>&mdash;Elizabeth Zagroba</h4>
