--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        A majority of the production failures (77%) can be reproduced by a unit test.
+      </h1>
+      <h4>&mdash;Kevlin Henney</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Developers on average spend as much as 58% of their time comprehending existing source code.      
       </h1>
       <h4>&mdash;Felienne Hermans</h4>
