--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Time used on warning about test automation is away from succeeding with it.
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+ 
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         A majority of the production failures (77%) can be reproduced by a unit test.
       </h1>
       <h4>&mdash;Kevlin Henney</h4>
