--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        The idea that test-driven development is design not testing is a prime example 
+        of our obsession with the binary. Can't it be testing and design? 
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Time used on warning about test automation is away from succeeding with it.
       </h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
