Add talks for autumn 24

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -56,6 +56,37 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Sociotechnical Guardrails for AI-Driven Application Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat, November 18-19th 2024, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_aidriven_application_testing.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#AI, #ContemporaryExploratoryTesting</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Test Automation - Friend or Foe</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Online Testing Conference, November 12th, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_test_automation_friend_or_foe.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#TestAutomation, #Improvement</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Code or Low Code - Navigating the Test Automation Options</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">TBD, November 27th 2024, Helsinki, Finland</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_code_or_low_code.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#TestAutomation, #Programming, #Tools</div>
+        </div>
+        
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Social Software Testing Approaches</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testing United, November 5th & 6th 2020, Online</div>
