Update upcoming talks

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -60,8 +60,18 @@
             <div class="talktitle">Sociotechnical Guardrails for AI-Driven Application Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat, November 18-19th 2024, Online</div>
-            <a href="https://github.com/maaretp/talks/blob/main/talk_aidriven_application_testing.md"><i class="fas fa-bars"></i></a>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_sociotechnical_guardrails_for_aidriven_application_testing.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#AI, #ContemporaryExploratoryTesting</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Nykypäivän tekoäly testauksessa / AI of Today in Testing</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Ohjelmistotestaus ry, August 22nd 2024, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_ai_of_today_in_testing.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#AI, #Automation, #ChangeManagement</div>
         </div>
 
         <div class="card2">
