--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li><span>June 4th 2024</span> Social Software Testing Approaches at <a href="https://www.meetup.com/zalando-tech-event-helsinki/events/300897602/">Quality Engineering Meetup at Zalando</a>, Helsinki, Finland.</li>
-            <li><span>June 21st 2024</span>State of Union - with Diego Molina, Puja Jagani and Maaret Pyhäjärvi at <a href="https://2024.seleniumconf.in">Selenium Conference 2024 (In / Online)</a></li>
-            <li><i>Available to speak on request by choice of employer, CGI (June 3rd 2024 ->).</i></li>
+            <li><span>August 22nd 2024</span> Nykypäivän tekoäly testauksessa (AI of Today in Testing) at <a href="https://www.linkedin.com/events/nykyp-iv-nteko-lytestauksessa7217525892888031232/">Ohjelmistotestaus ry event</a>, Online</li>
+            <li><span>November 18-19th 2024</span>Sociotechnical Guardrails for AI-Driven Application Testing at Agile Testing Alliance Global Testing Retreat, Online</li>
+            <li><span>November 12th 2024</span>Test Automation - Friend or Foe? at Online Testing Conference, Online</li>
+            <li><span>November 27th 2024</span>Code or Low Code - Navigating the Test Automation Options at TBD, Helsinki, Finland</li>
         </ul>
     </div>
 </section>
