--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        What you don't capture in your pipelines leaves when the person leaves. 
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         The idea that test-driven development is design not testing is a prime example 
         of our obsession with the binary. Can't it be testing and design? 
       </h1>
