--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,17 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Exploratory testing is simultaneously designing and executing tests to learn about the system, using your insights from the last experiment to inform the next.
+      </h1>
+      <h4>&mdash;Elisabeth Hendrickson</h4>
+    </div>
+  </div>
+
+  
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         What you don't capture in your pipelines leaves when the person leaves. 
       </h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
