--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             <li><span>November 18-19th 2024</span>Sociotechnical Guardrails for AI-Driven Application Testing at Agile Testing Alliance Global Testing Retreat, Online</li>
             <li><span>November 12th 2024</span>Test Automation - Friend or Foe? at Online Testing Conference, Online</li>
             <li><span>November 27th 2024</span>Code or Low Code - Navigating the Test Automation Options at TBD, Helsinki, Finland</li>
+            <li><span>December 10th 2024</span>Lessons Learned from Landing a Job Offer with GenAI at TBD, Helsinki, Finland</li>
         </ul>
     </div>
 </section>
