--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -57,6 +57,16 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
+            <div class="talktitle">Test Automation - Friend or Foe</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Online Testing Conference, November 12th, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_test_automation_friend_or_foe.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#TestAutomation, #Improvement</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
             <div class="talktitle">Sociotechnical Guardrails for AI-Driven Application Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat, November 18-19th 2024, Online</div>
@@ -69,19 +79,9 @@
             <div class="status">NEW</div>
             <div class="talktitle">Nykypäivän tekoäly testauksessa / AI of Today in Testing</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Ohjelmistotestaus ry, August 22nd 2024, Online</div>
+            <div class="wherewhenwhere"><a href="https://www.linkedin.com/events/7217525892888031232/comments/">Ohjelmistotestaus ry</a>, August 22nd 2024, Online</div>
             <a href="https://github.com/maaretp/talks/blob/main/talk_ai_of_today_in_testing.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#AI, #Automation, #ChangeManagement</div>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
-            <div class="talktitle">Test Automation - Friend or Foe</div>
-            <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Online Testing Conference, November 12th, Online</div>
-            <a href="https://github.com/maaretp/talks/blob/main/talk_test_automation_friend_or_foe.md"><i class="fas fa-bars"></i></a>
-            <div class="talktheme">#TestAutomation, #Improvement</div>
         </div>
 
         <div class="card2">
@@ -92,6 +92,16 @@
             <div class="wherewhenwhere">TBD, November 27th 2024, Helsinki, Finland</div>
             <a href="https://github.com/maaretp/talks/blob/main/talk_code_or_low_code.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#TestAutomation, #Programming, #Tools</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Lessons Learned from Landing a Job Offer with GenAI at TBD, Helsinki, Finland</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">TBD, December 10th, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_lessons_learned_from_landing_job_offer_with_genai.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#AI, #Testing, #Experiences</div>
         </div>
 
         <div class="card2">
