--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,26 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        “Software testing is an empirical, technical, investigation conducted to provide 
+        stakeholders with information about the quality of the product or service under test”
+      </h1>
+      <h4>&mdash;Cem Kaner</h4>
+    </div>
+  </div>
+
+  
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+      Product I test is my external imagination. <br>I am my developer's external imagination.</h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
       Works on my machine. What is different on yours?</h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
     </div>
