Add two events to speak at

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -89,7 +89,7 @@
             <div class="status">NEW</div>
             <div class="talktitle">Code or Low Code - Navigating the Test Automation Options</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">TBD, November 27th 2024, Helsinki, Finland</div>
+            <div class="wherewhenwhere"><a href="https://testingassembly.fistb.fi/seminar-27-11-2024/">Testing Assembly</a>, November 27th 2024, Helsinki, Finland</div>
             <a href="https://github.com/maaretp/talks/blob/main/talk_code_or_low_code.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#TestAutomation, #Programming, #Tools</div>
         </div>
@@ -97,9 +97,9 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
-            <div class="talktitle">Lessons Learned from Landing a Job Offer with GenAI at TBD, Helsinki, Finland</div>
+            <div class="talktitle">Lessons Learned from Landing a Job Offer with GenAI</div>
             <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">TBD, December 10th, Online</div>
+            <div class="wherewhenwhere"><a href="https://upload.fi/product/testaus-ai-2024/">Testaus & AI</a>, December 10th, Online</div>
             <a href="https://github.com/maaretp/talks/blob/main/talk_lessons_learned_from_landing_job_offer_with_genai.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#AI, #Testing, #Experiences</div>
         </div>
