--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -97,6 +97,17 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
+            <div class="talktitle">Ensemble Testing - 10 Years of Mindshare</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere"><a href="https://www.linkedin.com/events/ensembletesting-10yearsofmindsh7229526451585224704/comments/">Ohjelmistotestaus ry</a>, September 24th, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_ensemble_testing_ten_years_of_mindshare.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#EnsembleTesting, #SocialSoftwareTestingApproaches</div>
+        </div>
+
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
             <div class="talktitle">Lessons Learned from Landing a Job Offer with GenAI</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere"><a href="https://upload.fi/product/testaus-ai-2024/">Testaus & AI</a>, December 10th, Online</div>
