--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         <h2>Upcoming Talks</h2>
         <ul>
             <li><span>August 22nd 2024</span> Nykypäivän tekoäly testauksessa (AI of Today in Testing) at <a href="https://www.linkedin.com/events/nykyp-iv-nteko-lytestauksessa7217525892888031232/">Ohjelmistotestaus ry event</a>, Online</li>
+            <li><span>September 24th 2024</span>Ensemble Testing - 10 Years of Mindshare at <a href="https://www.linkedin.com/events/ensembletesting-10yearsofmindsh7229526451585224704/"></a></li>
             <li><span>November 18-19th 2024</span> Sociotechnical Guardrails for AI-Driven Application Testing at Agile Testing Alliance Global Testing Retreat, Online</li>
             <li><span>November 12th 2024</span> Test Automation - Friend or Foe? at Online Testing Conference, Online</li>
             <li><span>November 27th 2024</span> Code or Low Code - Navigating the Test Automation Options at <a href="https://testingassembly.fistb.fi/seminar-27-11-2024/">Testing Assembly</a>, Helsinki, Finland</li>
