Add latest agreed talk

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -80,6 +80,7 @@
             <div class="talktitle">Nykypäivän tekoäly testauksessa / AI of Today in Testing</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere"><a href="https://www.linkedin.com/events/7217525892888031232/comments/">Ohjelmistotestaus ry</a>, August 22nd 2024, Online</div>
+            <div class="wherewhenwhere">Customer event, September 20th 2024, Online</div>
             <a href="https://github.com/maaretp/talks/blob/main/talk_ai_of_today_in_testing.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#AI, #Automation, #ChangeManagement</div>
         </div>
