Add quote on test plans

--- a/quote.html
+++ b/quote.html
@@ -4,6 +4,17 @@
 </head>
 <body>
 
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Test plans aren't written, they are socialized.     
+</h1> 
+<h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
