--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li><span>August 20th 2024</span> AI of Today in Testing at a customer event</a>, Online</li>
             <li><span>September 24th 2024</span> Ensemble Testing - 10 Years of Mindshare at <a href="https://www.linkedin.com/events/ensembletesting-10yearsofmindsh7229526451585224704/">Ohjelmistotestaus ry event</a>, Online</li>
+            <li><span>October 8-9th 2024</span> TBD at Quality and Process Excellence Summit 2024</li>
             <li><span>November 18-19th 2024</span> Sociotechnical Guardrails for AI-Driven Application Testing at Agile Testing Alliance Global Testing Retreat, Online</li>
             <li><span>November 12th 2024</span> Test Automation - Friend or Foe? at Online Testing Conference, Online</li>
             <li><span>November 26th 2024</span> An Ensemble Testing Experience at CGI Testing Day, Helsinki</li>
