Add a quote on uniquely human

--- a/quote.html
+++ b/quote.html
@@ -8,6 +8,19 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        There are things that are always going to be uniquely human. Unfortunately most people are not good at those things.    
+</h1> 
+<h4>&mdash;Brené Brown</h4>
+    </div>
+  </div>
+
+  ”
+
+– Brené Brown
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Test plans aren't written, they are socialized.     
 </h1> 
 <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
