--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li><span>September 24th 2024</span> Ensemble Testing - 10 Years of Mindshare at <a href="https://www.linkedin.com/events/ensembletesting-10yearsofmindsh7229526451585224704/">Ohjelmistotestaus ry event</a>, Online</li>
-            <li><span>October 8-9th 2024</span> TBD at Quality and Process Excellence Summit 2024</li>
+            <li><span>October 8th 2024</span> Customer as Anchor - The Stopping Challenge of Testing at Quality and Process Excellence Summit 2024</li>
+            <li><span>October 6th 2024</span> [Training] Apply AI of Today on Your Testing (Finnish session) at <a href="https://tivia.fi/event/sovella-nykypaivan-tekoalya-testauksessasi-1090/register">TIVIA Infuture</a>, Helsinki, Finland</li>
             <li><span>November 18-19th 2024</span> Sociotechnical Guardrails for AI-Driven Application Testing at Agile Testing Alliance Global Testing Retreat, Online</li>
             <li><span>November 12th 2024</span> Test Automation - Friend or Foe? at Online Testing Conference, Online</li>
             <li><span>November 26th 2024</span> An Ensemble Testing Experience at CGI Testing Day, Helsinki</li>
