--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -77,6 +77,15 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
+            <div class="talktitle">Customer as Anchor - The Stopping Challenge of Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Quality and Process Excellence Summit 2024, October 8th 2024, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_sociotechnical_guardrails_for_aidriven_application_testing.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#FundamentalChallenges, #Customer, #Quality</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Nykypäivän tekoäly testauksessa / AI of Today in Testing</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere"><a href="https://www.linkedin.com/events/7217525892888031232/comments/">Ohjelmistotestaus ry</a>, August 22nd 2024, Online</div>
@@ -97,14 +106,12 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
             <div class="talktitle">Ensemble Testing - 10 Years of Mindshare</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere"><a href="https://www.linkedin.com/events/ensembletesting-10yearsofmindsh7229526451585224704/comments/">Ohjelmistotestaus ry</a>, September 24th, Online</div>
             <a href="https://github.com/maaretp/talks/blob/main/talk_ensemble_testing_ten_years_of_mindshare.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#EnsembleTesting, #SocialSoftwareTestingApproaches</div>
         </div>
-
 
         <div class="card2">
             <div class="timecircle">45 min</div>
