Add slides on latest talk

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -80,6 +80,7 @@
             <div class="talktitle">Customer as Anchor - The Stopping Challenge of Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Quality and Process Excellence Summit 2024, October 8th 2024, Online</div>
+            <a href="https://speakerdeck.com/maaretp/customer-as-anchor-the-stopping-challenge-of-testing"><i class="fab fa-slideshare"></i></a>
             <a href="https://github.com/maaretp/talks/blob/main/talk_sociotechnical_guardrails_for_aidriven_application_testing.md"><i class="fas fa-bars"></i></a>
             <div class="talktheme">#FundamentalChallenges, #Customer, #Quality</div>
         </div>
