Update talks and contributions

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -75,14 +75,13 @@
         </div>
 
         <div class="card2">
-            <div class="timecircle">45 min</div>
+            <div class="timecircle">1 day</div>
             <div class="status">NEW</div>
-            <div class="talktitle">Customer as Anchor - The Stopping Challenge of Testing</div>
-            <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">Quality and Process Excellence Summit 2024, October 8th 2024, Online</div>
-            <a href="https://speakerdeck.com/maaretp/customer-as-anchor-the-stopping-challenge-of-testing"><i class="fab fa-slideshare"></i></a>
-            <a href="https://github.com/maaretp/talks/blob/main/talk_sociotechnical_guardrails_for_aidriven_application_testing.md"><i class="fas fa-bars"></i></a>
-            <div class="talktheme">#FundamentalChallenges, #Customer, #Quality</div>
+            <div class="talktitle">Sovella nykypäivän tekoälyä testauksessasi / Apply AI of Today on Your Testing</div>
+            <div class="talktype">COURSE</div>
+            <div class="wherewhenwhere"><a href="https://tivia.fi/event/sovella-nykypaivan-tekoalya-testauksessasi-1090/register">TIVIA ry</a>, Npvember 6th 2024, Helsinki, Finland</div>
+            <a href="https://github.com/maaretp/talks/blob/main/course_apply_ai_of_today_on_your_testing.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#AI, #Testing, #Hands-on</div>
         </div>
 
         <div class="card2">
@@ -107,6 +106,27 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Lessons Learned from Landing a Job Offer with GenAI</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere"><a href="https://upload.fi/product/testaus-ai-2024/">Testaus & AI</a>, December 10th, Online</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_lessons_learned_from_landing_job_offer_with_genai.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#AI, #Testing, #Experiences</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Testauskatsaus tekoälyn uhkiin onnistumisen perustana / Know AI Threats to Focus on Success</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">TIVIA ry, October 18th 2024, Online</div>
+            <a href="https://speakerdeck.com/maaretp/testauskatsaus-tekoalyn-uhkiin-onnistumisen-perustana"><i class="fab fa-slideshare"></i></a>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_know_ai_threats_to_focus_on_success.md"><i class="fas fa-bars"></i></a>
+
+            <div class="talktheme">#AI, #Threats, #Testing</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Ensemble Testing - 10 Years of Mindshare</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere"><a href="https://www.linkedin.com/events/ensembletesting-10yearsofmindsh7229526451585224704/comments/">Ohjelmistotestaus ry</a>, September 24th, Online</div>
@@ -116,12 +136,12 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
-            <div class="talktitle">Lessons Learned from Landing a Job Offer with GenAI</div>
-            <div class="talktype">TALK</div>
-            <div class="wherewhenwhere"><a href="https://upload.fi/product/testaus-ai-2024/">Testaus & AI</a>, December 10th, Online</div>
-            <a href="https://github.com/maaretp/talks/blob/main/talk_lessons_learned_from_landing_job_offer_with_genai.md"><i class="fas fa-bars"></i></a>
-            <div class="talktheme">#AI, #Testing, #Experiences</div>
+            <div class="talktitle">Customer as Anchor - The Stopping Challenge of Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Quality and Process Excellence Summit 2024, October 8th 2024, Online</div>
+            <a href="https://speakerdeck.com/maaretp/customer-as-anchor-the-stopping-challenge-of-testing"><i class="fab fa-slideshare"></i></a>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_customer_as_anchor_stopping_challenge_of_testing.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#FundamentalChallenges, #Customer, #Quality</div>
         </div>
 
         <div class="card2">
@@ -138,28 +158,6 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
-            <div class="talktitle">A Process / Compliancy Story, Case of Last Two Years</div>
-            <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Customer Event, May 30th 2024, Helsinki, Finland</div>
-            <a href="https://github.com/maaretp/talks/blob/main/talk_process_compliance_story_case.md"><i class="fas fa-bars"></i></a>
-            <div class="talktheme">#Requirements, #Releases, #Process, #Compliance</div>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">45 min</div>
-            <!--<div class="status">NEW</div>-->
-            <div class="talktitle">Make Releases Routine</div>
-            <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Finnish Testing Meetup, May 23rd 2024, Helsinki, Finland</div>
-            <a href="https://github.com/maaretp/talks/blob/main/talk_making_releases_routine.md"><i class="fas fa-bars"></i></a>
-            <a href="https://github.com/maaretp/legacy/blob/main/talks_to_articles/making_releases_routine/MakingReleasesRoutine.pdf"><i class="fab fa-slideshare"></i></a>
-            <div class="talktheme">#Releases, #Failure, #ResultsGap</div>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">45 min</div>
-            <!--<div class="status">NEW</div>-->
             <div class="talktitle">Make Your Impact with Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">HUSTEF, October 3-5th 2023, Budapest, Hungary</div>
@@ -554,6 +552,26 @@
             <div class="wherewhenwhere">Tivia IT Insider webinar, February 14th 2023, Online.</div>
             <div class="talktheme">#SocialMedia</div>
             <a href="https://speakerdeck.com/maaretp/finnish-mikrobloggaus-mastodonissa"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">A Process / Compliancy Story, Case of Last Two Years</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Customer Event, May 30th 2024, Helsinki, Finland</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_process_compliance_story_case.md"><i class="fas fa-bars"></i></a>
+            <div class="talktheme">#Requirements, #Releases, #Process, #Compliance</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <!--<div class="status">NEW</div>-->
+            <div class="talktitle">Make Releases Routine</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Finnish Testing Meetup, May 23rd 2024, Helsinki, Finland</div>
+            <a href="https://github.com/maaretp/talks/blob/main/talk_making_releases_routine.md"><i class="fas fa-bars"></i></a>
+            <a href="https://github.com/maaretp/legacy/blob/main/talks_to_articles/making_releases_routine/MakingReleasesRoutine.pdf"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#Releases, #Failure, #ResultsGap</div>
         </div>
 
         <div class="card2">
